# StereoVisionProject

./: README.md
StereoVisionProject/: CMakeLists.txt  main.cpp  stereo_calib.yaml
StereoVisionProject/models/: osnet_x0_25_market1501.onnx  temp_skeleton.onnx
